Minor adition to readme

--- a/readme.asciidoc
+++ b/readme.asciidoc
@@ -52,7 +52,11 @@ Any thoughts?
 
 Andrew
 
-ps -- I've stuck all this stuff up on GitHub so that you can access it easily unless you have a quick answer.  
+ps -- I've stuck all this stuff up on GitHub so that you can access it easily unless you have a quick answer.  The repo is:
+
+https://github.com/MakerPress/process_post_request
+
+  
 
 
 
